<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".Solution1">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@id/chip1"
        android:layout_alignBottom="@id/chip1"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="-76dp"
        android:contentDescription="@string/github_id"
        app:srcCompat="@drawable/github1"
        app:shapeAppearanceOverlay="@style/circular"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/profile_photo"
        android:text="@string/profile_photo"
        android:visibility="visible"
        app:shapeAppearanceOverlay="@style/circular"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/profileImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-69dp"
        android:backgroundTint="#FFFF00"
        android:text="@string/login1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/chip1"
        android:layout_alignBottom="@id/profileImage"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="-201dp"
        android:layout_marginBottom="-69dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@id/chip1"
        android:layout_alignBottom="@id/chip1"
        android:layout_alignParentBottom="false"
        android:layout_marginEnd="-26dp"
        android:layout_marginBottom="-75dp"
        android:contentDescription="@string/gmail_id"
        app:srcCompat="@drawable/googlelogo"
        app:shapeAppearanceOverlay="@style/circular"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@id/imageView2"
        android:layout_alignBottom="@id/chip2"
        android:layout_marginEnd="-100dp"
        android:layout_marginBottom="-76dp"
        app:srcCompat="@drawable/facebooklogo"
        android:contentDescription="@string/todo2"
        app:shapeAppearanceOverlay="@style/circular"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/imageView1"
        android:layout_alignBottom="@id/imageView1"
        android:layout_marginEnd="-86dp"
        android:layout_marginBottom="-37dp"
        android:text="@string/or"
        android:textColor="#E1BEE7"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView1"
        android:layout_alignBottom="@id/textView1"
        android:layout_marginEnd="-40dp"
        android:layout_marginBottom="-42dp"
        android:text="@string/enter_username"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/EditText1"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@id/textView2"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="-158dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView2"
        android:layout_alignBottom="@id/textView2"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="-69dp"
        android:text="@string/password"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/textView3"
        android:layout_alignBottom="@id/textView3"
        android:layout_marginEnd="-174dp"
        android:layout_marginBottom="-53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:layout_alignEnd="@id/chip2"
        android:layout_alignBottom="@id/editTextTextPersonName2"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="-38dp"
        android:text="@string/remember_me"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editTextTextPersonName2"
        android:layout_alignBottom="@id/editTextTextPersonName2"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="-92dp"
        android:text="@string/done"
        android:textAlignment="center"
        android:textColor="#000000"
        app:chipSurfaceColor="#FF4081" />


</RelativeLayout>